@@ -3,6 +3,13 @@ plugins {
 }
 
 apply plugin: 'uk.gov.justice.service.laa.laa-spring-boot-gradle-plugin'
+apply plugin: "com.diffplug.spotless"
+
+configurations {
+    mockitoAgent {
+        transitive = false
+    }
+}
 
 configurations.configureEach {
     resolutionStrategy.eachDependency { details ->
@@ -97,7 +104,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.23.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:6.1.2'
 
-
+    mockitoAgent "org.mockito:mockito-core"
 }
 
 wsimport {
@@ -156,8 +163,11 @@ wsimport {
 test {
     useJUnitPlatform()
 
-    // Hide warning for dynamic loading of agents https://github.com/mockito/mockito/issues/3037
-    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs(
+            "-javaagent:${configurations.mockitoAgent.asPath}",
+            "-Xshare:off",
+            "-Dnet.bytebuddy.safe=true" // Prevent unsafe memory access, see https://github.com/raphw/byte-buddy/issues/1803
+    )
 
     finalizedBy jacocoTestReport
 }
@@ -192,3 +202,30 @@ checkstyleMain {
     exclude '**/uk/gov/gsi/legalaid/**'
     exclude '**/org/oasis_open/**'
 }
+
+spotless {
+    java {
+        target 'src/*/java/**/*.java'
+        importOrder()
+        removeUnusedImports()
+        cleanthat()
+        googleJavaFormat('1.34.1')
+    }
+}
+
+/**
+ * Automatically installs the git pre-commit hook to run spotlessApply.
+ */
+tasks.register('installGitHooks', Copy) {
+    from "../scripts/pre-commit"
+    into "${rootProject.rootDir}/.git/hooks"
+
+    // Gradle 9.x replacement for fileMode
+    filePermissions {
+        unix(0755)
+    }
+}
+
+// Linked to compileJava so it installs on the first build
+compileJava.dependsOn installGitHooks
+
